[package]
name = "raytracing"
version = "0.1.0"
authors = ["Bugen Zhao <i@bugenzhao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16"
anyhow = "1.0"
itertools = "0.10.0"
arrayvec = "0.5"
num = "0.3"
rayon = "1.5"
rand = "0.8"
indicatif = { version = "0.15", features = ["rayon"] }
pixels = "0.2"
winit = "0.24"
winit_input_helper = "0.9"
